<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">钟爱MM</string>
    <string name="app_version">2.0</string>
    <string name="about">About</string>
    <string name="build_version">Build version</string>
    <string name="version">Version</string>
    <string name="strPrev">Prev</string>
    <string name="strNext">Next</string>
    <string name="hide_clock">Hide clock</string>
    <string name="show_clock">Show clock</string>
    <string name="full_screen">Full screen</string>
    <string name="exit_full_screen">Exit Full Screen</string>
    <string name="ContentDesc">Missing Picture</string>
    <string name="strExit">Exit</string>
    <string name="settings">Settings</string>
    <string name="set_wallpaper">Set as wallpaper</string>
    <string name="set_wallpaper_ok">Wallpaper is successfully set.</string>
    <string name="set_wallpaper_fail">Wallpaper is not properly set.</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="exit_msg">Are you sure to exit?</string>
    <string name="ok">OK</string>
    <string name="set_wallpaper_msg">Now settings...</string>
    <string name="set_wallpaper_title">Wallpaper</string>
    <string name="livewallpaper_desc">Live Clock Wallpaper</string>
    <string name="exit_toast">Press BACK again to exit</string>
    <string name="set_livewallpaper">Set live wallpaper</string>
    <string name="help_livewallpaper">Select iWatch from the live wallpaper list.</string>
    <string name="loading">Loading...</string>
    <string name="pref_autohide_clock">Auto hide watch</string>
    <string name="pref_autohide_clock_sum">The watch will be auto hidden when using the App.</string>
    <string name="pref_autohide_ad">Auto hide AD</string>
    <string name="pref_autohide_ad_sum">If user clicks AD, AD will be auto hidden for the next hour.</string>
    <string name="pref_autohide_sb">Auto hide system bar</string>
    <string name="pref_autohide_sb_sum">System bar will be  always hidden.</string>
    <string name="last_click_time">. Last click time: </string>
    <string name="pref_boss_key">Enable Boss Key</string>
    <string name="pref_boss_key_sum">In Boss mode, show clock will hide picture frame.</string>
    <string name="pref_pic_fullfill">Picture to fit screen</string>
    <string name="pref_pic_fullfill_sum">Zoom pictures to fit screen by default.</string>
    <string name="pref_wp_fullfill">Wallpaper auto scale</string>
    <string name="pref_wp_fullfill_sum">Picture will be scaled to fit screen, or use crop tool by default</string>
    <string name="pref_slide_anim">Slide Animation</string>
    <string name="pref_slide_anim_sum">Click to set slide animation.</string>
    <string name="pref_netimg_res">Network Album Image Resolution</string>
    <string name="pref_netimg_res_sum">Click to select the image resolution for network album.</string>
    <string name="pref_auto_rotate">Auto-rotate screen</string>
    <string name="pref_auto_rotate_sum">Set screen orientation to auto rotate when viewing images.</string>
    <string name="none">None</string>
    <string name="slide_anim_transition">Transition</string>
    <string name="slide_anim_slide">Slide</string>
    <string name="slide_anim_slide_vertical">Slide vertical</string>
    <string name="remote_mode">Remote Album</string>
    <string name="local_mode">Local Album</string>
    <string name="browse_all">Browse all</string>
    <string name="runningFaceDetection">Please wait\u2026</string>
    <string name="wallpaper">Setting wallpaper, please wait\u2026</string>
    <string name="savingImage">Saving picture\u2026</string>
    <string name="multiface_crop_help">Tap a face to begin.</string>
    <string name="crop_label">Crop Image</string>
    <string name="failed_network">Network is not available, use local album instead.</string>
    <string name="clean_buf">Clean buffer</string>
    <string name="clean_buf_msg">Now cleaning buffers...</string>
    <string name="clean_buf_title">Clean Buffers</string>
    <string name="available_bufsize">Usable buffer size is </string>
    <string name="used_bufsize">Your current used buffer size is </string>
    <string name="sure_to_clean">, are you sure to clean?</string>
    <string name="strRefs">Reference</string>
    <string name="strSource">Source</string>
    <string name="strNewSearch">Refresh</string>
    <string name="strMoreSearch">More</string>
    <item name="tag_page" type="id"/>
    <item name="tag_id" type="id"/>
</resources>
