<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_toggle_clock"
          android:title="@string/hide_clock"
          android:icon="@drawable/ic_menu_clock_face"/>

    <item android:id="@+id/menu_toggle_mode"
          android:title="@string/remote_mode"
          android:icon="@android:drawable/ic_menu_gallery"/>

    <item android:id="@+id/menu_set_livewallpaper"
          android:title="@string/set_livewallpaper"
          android:icon="@drawable/ic_menu_livewallpaper"/>
    <item android:id="@+id/menu_set_wallpaper"
          android:title="@string/set_wallpaper"
          android:icon="@android:drawable/ic_menu_gallery"/>
    <item android:id="@+id/menu_settings"
          android:title="@string/settings"
          android:icon="@android:drawable/ic_menu_preferences"/>
</menu>